@@ -1,3 +1,14 @@
+Wed Nov 17 10:14:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/Writer_T.cpp:
+          Throwing an internal error when the publisher on the
+          DataWriter seems to be NIL. If nil, write_many will block and no info
+          is returned to the user.
+
+        * connectors/dds4ccm/impl/ndds/DataWriter_T.cpp:
+          Implemented 'get_publisher' method.
+          Added DDS4CCM_TRACE info to every method.
+
 Wed Nov 17 09:26:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.idl:
